working image upload

--- a/triangle_color_test.html
+++ b/triangle_color_test.html
@@ -9,13 +9,11 @@
 
   <script src="_js/p5.js"></script>
   <script src="_js/p5.dom.min.js"></script>
-  <script src="_js/delaunator.js"></script>
+  <script src="_js/delaunay.js"></script>
 </head>
 
 <body>
-  <h2>Upload your own image</h2>
-
-  <script src="_js/image3.js"></script>
+  <script src="_js/sketch3.js"></script>
 </body>
 
 </html>
