--- a/image1.html
+++ b/image1.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <h2>Upload your own image</h2>
-  
+  <h2>Preloaded Image - Move Slider to Adjust Image</h2>
+
   <script src="_js/image1.js"></script>
 </body>
 
