--- a/image4.html
+++ b/image4.html
@@ -18,7 +18,7 @@
 <body>
   <script src="_js/image4.js"></script>
   <div id="uploadImage">
-    <h2>Upload your own image</h2>
+    <h2>Low Poly Generator Mockup - Upload your own image</h2>
     <!--
       <p><input type="file"  accept="image/*" name="image" id="file"  onchange="loadFile(event)" style="display: none;"></p>
       <p><label for="file" style="cursor: pointer;">Upload Image</label></p>
@@ -32,13 +32,13 @@
 
   <div id="sectionTwo">
     <div id="toolbar1">
-      <a href="#"><button class="placeBtn" onclick="placePoints()"><i class="fas fa-pencil-alt fa-1x"></i></button></a>
-      <a href="#"><button class="placeBtn" onclick="sprayPoints()"><i class="fas fa-spray-can fa-1x"></i></button></a>
-      <a href="#"><button class="placeBtn" onclick="erasePoints()"><i class="fas fa-eraser fa-1x"></i></button></a>
-      <a href="#"><button class="placeBtn">Brush Size<input class="brushInput" type="text" id="brushSize" name="brushSize"></button></a>
-      <a href="#"><button class="placeBtn">Spray Density<input class="brushInput" type="text" id="brushDensity" name="brushDensity"></button></a>
-      <a href="#"><button class="placeBtn" onclick="savePNG()"><i class="far fa-file-image"></i> Save as PNG</button></a>
-      <a href="#"><button class="placeBtn" onclick="saveSVG()"><i class="far fa-file-image"></i> Save as SVG</button></a>
+      <button class="placeBtn" onclick="placePoints()"><i class="fas fa-pencil-alt fa-1x"></i></button>
+      <button class="placeBtn" onclick="sprayPoints()"><i class="fas fa-spray-can fa-1x"></i></button>
+      <button class="placeBtn" onclick="erasePoints()"><i class="fas fa-eraser fa-1x"></i></button>
+      <button class="placeBtn">Brush Size<input class="brushInput" type="text" id="brushSize" name="brushSize"></button>
+      <button class="placeBtn">Spray Density<input class="brushInput" type="text" id="brushDensity" name="brushDensity"></button>
+      <button class="placeBtn" onclick="savePNG()"><i class="far fa-file-image"></i> Save as PNG</button>
+      <button class="placeBtn" onclick="saveSVG()"><i class="far fa-file-image"></i> Save as SVG</button>
     </div>
 
     <div id="toolbar2" style="text-align: center;">
@@ -46,7 +46,7 @@
     </div>
 
     <div id="toolbar3">
-      <a href="#"><button class="placeBtn"><i class="fa fa-home"></i>Show/Hide Points</button></a>
+      <button class="placeBtn"><i class="fa fa-home"></i>Show/Hide Points</button></a>
       <a href="#" class="placeBtn">Show/Hide<br /> Colors</a>
       <a href="#" class="placeBtn">Show/Hide<br /> Triangles</a>
       <a href="#" class="placeBtn">Show/Hide<br /> Image</a>
