--- a/index.html
+++ b/index.html
@@ -5,17 +5,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delauney Triangulation Experiment</title>
-  <link rel="stylesheet" href="styles3.css">
-
-  <script src="_js/p5.js"></script>
-  <script src="_js/p5.dom.min.js"></script>
-  <script src="_js/delaunator.js"></script>
+  <link rel="stylesheet" href="index.css">
+  <!-- Add icon library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/5efd5c9bde.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <h2>Upload your own image</h2>
+<h1>Low-Poly Generator Experiments</h1>
 
-  <script src="_js/image3.js"></script>
+<h3>Experiment 1 - Fullscreen low-poly gradient</h3>
+<p>Just a simple low poly grandient</p>
+
+<h3>Experiment 2</h3>
+<p>Upload your own image, use slider to assign number of triangles in artwork</p>
+
+<h3>Experiment 3 - Low Poly Animation</h3>
+<p>Upload your own image, use slider to assign number of triangles in artwork</p>
+
+<h3>Experiment 4 - Draw your own Triangles</h3>
+<p>Upload your own image, click mouse at location of triangle point to shape your artwork.</p>
 </body>
 
 </html>
